Inclusão de carro funcionando com validações e versão de swagger com mais explicações sobre a funcionalidade. Mudanças a serem submetidas: 	new file:   examples/SimpleTest/general_tests.ipynb 	renamed:    system/classes/controller/CarroController.py -> system/classes/controller/Carro_controller.py 	renamed:    system/classes/controller/ClienteController.py -> system/classes/controller/Cliente_controller.py 	deleted:    system/classes/controller/MainController.py 	new file:   system/classes/controller/Main_controller.py 	modified:   system/classes/model/Carro.py 	renamed:    system/classes/model/database/CarroDB.py -> system/classes/model/database/Carro_DB.py 	renamed:    system/classes/model/database/ClienteDB.py -> system/classes/model/database/Cliente_DB.py 	renamed:    system/classes/model/database/LocacaoDB.py -> system/classes/model/database/Locacao_DB.py 	deleted:    system/classes/model/database/locadora.db 	modified:   system/rest-app.py 	modified:   system/swagger.yml 	deleted:    system/tests/model/database/locadora_teste.db 	deleted:    system/tests/model/database/test_CarroDB.py 	new file:   system/tests/model/database/test_inserir_carro.py 	modified:   system/util/util.py
